# api/controllers/financeController.js
@@ -7,7 +7,18 @@ exports.getMonthlyRevenue = async (req, res) => {
         const monthlyRevenue = await financeService.calculateMonthlyRevenue(year)
         return helper.sendResponse(res, monthlyRevenue)
     } catch (err) {
-        console.log(err)
+        helper.prettyLog(`catching ${err}`)
+        helper.log2File(err.message,'error')
+        return helper.sendResponse(res, 500, {message:err.message, success:false})
+    }
+}
+
+exports.getDailyRevenue = async (req, res) => {
+    try {
+        const { year, month } = req.query
+        const dailyRevenues = await financeService.calculateDailyRevenue(year, month)
+        helper.sendResponse(res, dailyRevenues);
+    } catch (error) {
         helper.prettyLog(`catching ${err}`)
         helper.log2File(err.message,'error')
         return helper.sendResponse(res, 500, {message:err.message, success:false})
