# api/routes/finance.js
@@ -3,5 +3,6 @@ const router = express.Router()
 const FinanceController = require('../controllers/financeController.js')
 
 router.get('/monthly-revenue', FinanceController.getMonthlyRevenue)
+router.get('/daily-revenue', FinanceController.getDailyRevenue)
 
 module.exports = router
